[package]
name = "brute_ratel_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rust_xlsxwriter = "0.73.0"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"] }
clap_derive = { version = "4.5.13" }
